--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,14 @@ services:
       - postgres:/var/lib/postgresql/data
 
   moodle:
+    container_name: moodle2
     image: erseco/alpine-moodle
     build: .
     restart: unless-stopped
     environment:
-      - LANG=en_US.UTF-8
-      - LANGUAGE=en_US:en
-      - SITE_URL=http://localhost
+      - LANG=pt_BR.UTF-8
+      - LANGUAGE=pt_BR:pt
+      - SITE_URL=http://treinamentos-miedx.damasceno.pro:8080
       - DB_TYPE=pgsql
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -34,10 +35,10 @@ services:
       - REVERSEPROXY=false
       - SSLPROXY=false
       - MOODLE_EMAIL=user@example.com
-      - MOODLE_LANGUAGE=en
+      - MOODLE_LANGUAGE=pt
       - MOODLE_SITENAME=New-Site
       - MOODLE_USERNAME=moodleuser
-      - MOODLE_PASSWORD=PLEASE_CHANGEME
+      - MOODLE_PASSWORD=trainamentosmied1
       - SMTP_HOST=smtp.gmail.com
       - SMTP_PORT=587
       - SMTP_USER=your_email@gmail.com
@@ -46,13 +47,21 @@ services:
       - MOODLE_MAIL_NOREPLY_ADDRESS=noreply@localhost
       - MOODLE_MAIL_PREFIX=[moodle]
     ports:
-      - 80:8080
+      - 8080:8080
     volumes:
       - moodledata:/var/www/moodledata
       - moodlehtml:/var/www/html
     depends_on:
       - postgres
       - redis
+    labels:
+      - "traefik.enable=true"
+      - 'traefik.http.routers.moodle2.rule=HostRegexp(`treinamentos-mied.damasceno.pro`)'
+      - "traefik.http.routers.moodle2.entrypoints=websecure"
+      - "traefik.http.routers.moodle2.tls.certresolver=letsencrypt"
+      - 'traefik.http.routers.moodle2.middlewares=gzip@file'
+      - "traefik.http.routers.moodle2.service=moodle2"
+      - "traefik.http.services.moodle2.loadbalancer.server.port=8080"
 
 volumes:
   postgres: null
